@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>DiscImageChef.Checksums</RootNamespace>
     <AssemblyName>DiscImageChef.Checksums</AssemblyName>
-    <ReleaseVersion>3.1.0</ReleaseVersion>
+    <ReleaseVersion>3.2.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
