@@ -1,3 +1,8 @@
+2016-08-01  Natalia Portillo  <claunia@claunia.com>
+
+	* AssemblyInfo.cs:
+	* DiscImageChef.Checksums.csproj: Bump to version 3.2.0
+
 2016-07-29  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.Checksums.csproj: Bump to version 3.1.0.
